update html file

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </main>
   
   <footer>
-    <p>Chat bot made by Lorenzo Dastoli 2025/p>
+    <p>Chat bot made by Lorenzo Dastoli 2025</p>
   </footer>
   
   <script src="script.js"></script>
